--- a/appspec.yml
+++ b/appspec.yml
@@ -1,17 +1,17 @@
 version: 0.0
 os: linux
 files:
--source:/index.html
- destination: /var/www/html/
+  - source: /index.html
+    destination: /var/www/html/
 hooks:
- Beforelnstall:
- -location: scripts/httpd_install.sh
-  timeout: 300
-  runas: root
- -location: scripts/httpd_start.sh
-  timeout: 300
-  runas: root
-ApplicationStop:
- -location: scripts/httpd stop.sh
-  timeout: 300
-  runas: root
+  BeforeInstall:
+    - location: scripts/httpd_install.sh
+      timeout: 300
+      runas: root
+    - location: scripts/httpd_start
+      timeout: 300
+      runas: root
+  ApplicationStop:
+    - location: scripts/httpd_stop.sh
+      timeout: 300
+      runas: root
